# MBA_Emotions_Analysis

./: README.md  notebook.ipynb  pyproject.toml
