[tool.poetry]
name = "mba-emotions-analysis"
version = "0.1.0"
description = ""
authors = ["timbo003 <tim.strohmenger@tisito.de>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.13"
pandas = "^2.2.3"
matplotlib = "^3.9.3"
nltk = "^3.9.1"
bs4 = "^0.0.2"
wordcloud = "^1.9.4"
emoji = "^2.14.0"
contractions = "^0.1.73"
textblob = "^0.18.0.post0"
scikit-learn = "^1.6.0"
seaborn = "^0.13.2"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
